[project]
name = "chembl-multitarget-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "psutil>=7.2.1",
    "rdkit>=2025.9.3",
]

[project.optional-dependencies]
interactive = [
    "ipykernel>=7.1.0",
    "ipython>=8.38.0",
]
